apps/home-automation-Home_Assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:stable
        ports:
        - containerPort: 8123
          name: http
        volumeMounts:
        - mountPath: /config
          name: homeassistant-storage
      volumes:
      - name: homeassistant-storage
        persistentVolumeClaim:
          claimName: homeassistant-pvc
