apps/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1883
          name: mqtt
        volumeMounts:
        - mountPath: /mosquitto/data
          name: mosquitto-storage
      volumes:
      - name: mosquitto-storage
        persistentVolumeClaim:
          claimName: mosquitto-pvc
