apps/zigbee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /app/data
          name: data
        - mountPath: /dev/ttyUSB0
          name: zigbee-adapter
      volumes:
      - name: config-template
        configMap:
          name: zigbee2mqtt-config
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-pvc
      - name: zigbee-adapter
        hostPath:
          path: /dev/ttyUSB0
          type: CharDevice
