apps/home-automation-Mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
  - port: 1883
    targetPort: 1883
    name: mqtt
  selector:
    app: mosquitto
