apps/home_Assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
  - port: 8123
    targetPort: 8123
    name: http
  selector:
    app: homeassistant
