apps/home_Assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: home-automation
  annotations:
    tailscale.com/expose: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - homeassistant
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
