apps/pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    tailscale.com/expose: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - pihole
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-service
            port:
              number: 80
